refactor(travel): 여행 수정 서비스 로직 리팩토링